--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,30 @@
 frontend/node_modules/
 frontend/dist/
 frontend/.vite/
+# Logs
+*/logs
+*/*.log
+*/npm-debug.log*
+*/yarn-debug.log*
+*/yarn-error.log*
+*/pnpm-debug.log*
+*/lerna-debug.log*
+
+*/node_modules
+*/dist
+*/dist-ssr
+*.local
+
+# Editor directories and files
+*.vscode/*
+!*.vscode/extensions.json
+*.idea
+*.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 .env
 
 # React Router
@@ -22,7 +46,6 @@ foundry/out/
 foundry/cache/
 foundry/node_modules/
 foundry/lib
-
 
 # Noir / circuits
 circuit/target/
