--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,37 +1,34 @@
 {
   "name": "frontend",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@aztec/bb.js": "^1.2.1",
-    "@chakra-ui/react": "^3.27.0",
+    "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@noir-lang/noir_js": "^1.0.0-beta.11",
-    "@react-router/node": "^7.7.1",
-    "@react-router/serve": "^7.7.1",
     "ethers": "^6.15.0",
     "framer-motion": "^12.23.13",
-    "isbot": "^5.1.27",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router": "^7.7.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.7.1",
-    "@tailwindcss/vite": "^4.1.4",
-    "@types/node": "^20",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "tailwindcss": "^4.1.4",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.6",
-    "vite-tsconfig-paths": "^5.1.4"
+    "@eslint/js": "^9.33.0",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@vitejs/plugin-react": "^5.0.0",
+    "eslint": "^9.33.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "vite": "^7.1.2"
   }
 }
