--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@aztec/bb.js": "^1.2.1",
-    "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@fontsource/inter": "^5.2.7",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
     "@noir-lang/noir_js": "^1.0.0-beta.11",
     "ethers": "^6.15.0",
-    "framer-motion": "^12.23.13",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
